test/simple/correct/Daan1.hs
module Daan1 where

main :: Int
main = 0

f :: [Int]
f = id (case True of True -> []
       )
